--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,6 @@ background-color: #ffffff;
     display: flex;
     flex-direction: row;
     align-items: center;
-   /*  padding-right: 135px; */
 }
 
 .input-search {
@@ -133,7 +132,6 @@ background-color: #ffffff;
     height: 24px;
     top: 3px;
     margin-left: 40px;
-    /* right: 25px; */
 }
 
 
@@ -192,6 +190,7 @@ background-color: #ffffff;
 .header-banner-contain p {
     font-weight: 600;
     font-size: 1.4rem;
+    font-style: normal;
     line-height: 16px;
     color: #ffffff;
     font-family: var(--font-family-body);
@@ -234,10 +233,6 @@ background-color: #ffffff;
     display: flex;
     flex-direction: column;
     padding-top: 16px;
-}
-
-.product {
-    margin: 15px;
 }
 
 .product-contain{
@@ -321,10 +316,22 @@ background-color: #ffffff;
     color: #2A7AE4; 
 }
 
+/* FOOTER */
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
 /* CONTACT */
 
 .contact {
-    padding-bottom: 16px;
+
+    background: #EAF2FD;
+    width: 100%;
+
 
 }
 
@@ -368,18 +375,13 @@ background-color: #ffffff;
     color: #464646;
 }
 
-footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: #ffffff ;
-}
 
-footer p {
+
+footer .footer-piePagina {
     font-family: var(--font-family-body);
     font-style: normal;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 1.6rem;
     line-height: 19px;
     text-align: center;
     color: #464646;
