--- a/assets/css/login-mobile.css
+++ b/assets/css/login-mobile.css
@@ -31,6 +31,13 @@
 --shadow: 0 5px 10px #55a6ff38;
 }
 
+@media (min-width: 1000px) {
+  :root {
+
+      --font-size-input-label: 1.6rem;
+  }
+  
+}
 
 
 html {
@@ -174,6 +181,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: #ffffff;
 }
 
 
