agregar-producto.html validation form addproduct

--- a/assets/css/aproducto-mobile.css
+++ b/assets/css/aproducto-mobile.css
@@ -180,9 +180,14 @@ background-color: #ffffff;
   padding: 32px;
 }
 
-.btn-aproducto-container {
+.card-container .button {
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+.card-container .button a {
+  color: var(--contrast-light-color);
 }
 
 .card-container .input-container input {
